--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
         os: ['ubuntu-latest']
         compiler:
           - name: nim
+            version: version-2-0
+          - name: nim
             version: version-1-6
           - name: nim
             version: version-1-4
@@ -57,7 +59,7 @@ jobs:
 
       - if: matrix.compiler.name == 'nim'
         name: Setup Nim
-        uses: alaviss/setup-nim@0.1.1
+        uses: alaviss/setup-nim@0.1.2
         with:
           path: nim
           version: ${{ matrix.compiler.version }}
@@ -92,7 +94,7 @@ jobs:
         with:
           path: ci/libgit2
           repository: libgit2/libgit2
-          ref: v1.5.0
+          ref: v1.7.1
 
       - name: Setup libgit2
         shell: bash
@@ -118,7 +120,7 @@ jobs:
           ./nimph doctor || true
           cat nim.cfg
           cd `./nimph path balls`
-          nim c --out:$HOME/balls --define:release balls.nim
+          nim c --out:$HOME/balls balls.nim
           cd -
           echo "remove nim's config.nims...?"
           ls -l `dirname \`which nim\``/../config/
@@ -160,7 +162,7 @@ jobs:
       - name: Publish docs
         if: >
           github.event_name == 'push' && github.ref == 'refs/heads/master' &&
-          matrix.os == 'ubuntu-latest' && matrix.nim == 'version-1-6'
+          matrix.os == 'ubuntu-latest' && matrix.nim == 'version-2-0'
         uses: crazy-max/ghaction-github-pages@v1
         with:
           build_dir: ci/docs
