--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
         os: ['ubuntu-latest']
         compiler:
           - name: nim
-            version: version-2-0
+            version: devel
+          #- name: nim
+          #  version: version-2-0
           - name: nim
             version: version-1-6
           - name: nim
