--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
       - name: Pages
         if: >
           github.event_name == 'push' && github.ref == 'refs/heads/master' &&
-          matrix.os == 'ubuntu-latest' && matrix.nim == 'version-1-6'
+          matrix.os == 'ubuntu-latest' && matrix.compiler.version == 'version-1-6'
         uses: crazy-max/ghaction-github-pages@v1
         with:
           build_dir: ci/docs
